reformatted assignment files

--- a/assignment-files/index.html
+++ b/assignment-files/index.html
@@ -18,25 +18,22 @@
         &nbsp;&nbsp;<code>js-objects-intermediate</code>
       </h1>
       <p>All the <em>fun</em> is in the console</p>
-      <p>Check your results <mark><a target="_blank" href="./_test-suite/test.html">here</a></mark></p>
+      <!-- <p>Check your results <mark><a target="_blank" href="./_test-suite/test.html">here</a></mark></p> -->
     </div>
 
     <!-- ex-01 -->
     <script src='./ex-01-getDogAgeInHumanYears.js'></script>
 
     <!-- ex-02 -->
-    <!-- <script src='./ex-02-isOlderThan.js'></script> -->
+    <script src='./ex-02-isOlderThan.js'></script>
 
     <!-- ex-03 -->
-    <!-- <script src='./ex-03-calculateAnnualInterest.js'></script> -->
-
-    <!-- ex-04 -->
-    <!-- <script src='./ex-04-getKeys.js'></script> -->
+    <script src='./ex-03-getKeys.js'></script>
 
     <!-- ex-05 -->
-    <!-- <script src='./ex-05-reverseObject.js'></script> -->
+    <script src='./ex-04-reverseObject.js'></script>
 
     <!-- ex-06 -->
-    <!-- <script src='./ex-06-countTheHoles.js'></script> -->
+    <script src='./ex-05-countTheHoles.js'></script>
   </body>
 </html>
